# secret-santa

./: .gitignore  Cargo.toml  rustc-ice-2023-11-24T23_14_01-191609.txt  rustc-ice-2023-11-24T23_14_01-191610.txt  shell.nix
src/: errors.rs  main.rs  mod.rs  runner.rs  scheme.rs  utils.rs
