[package]
name = "secret_santa_bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = { version = "0.12", features = ["macros"] }
log = "0.4"
pretty_env_logger = "0.4"
tokio = { version =  "1.8", features = ["rt-multi-thread", "macros"] }
sled = "0.34.7"
lazy_static = "1.4.0"
serde = "1.0.193"
ron = "0.8.1"
rand = "0.8.5"

